[package]
name = "vulkan_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version="0.37.3", features=["debug", "linked"], default-features = false}
ash-window = "0.12.0"
winit = {version="0.29.2", features=["rwh_05"]}
raw-window-handle = "0.5"
